--- a/styles/main.css
+++ b/styles/main.css
@@ -2,5 +2,45 @@ body {
   background-color: powderblue;
   color: tomato; }
 
-ul {
-  list-style-type: none; }
+.main-container li {
+  overflow: hidden;
+  padding: 10px 0;
+  border-bottom: 1px solid #e9e9e9; }
+  .main-container li * {
+    float: left; }
+
+.main-container .checkboxStyle {
+  margin-top: 15px !important; }
+
+.main-container .task {
+  font-size: 18px;
+  line-height: 34px;
+  padding: 0 0 0 10px; }
+
+.main-container #completed-tasks .task {
+  text-decoration: line-through;
+  color: #e4e4e4; }
+
+.main-container .row {
+  text-align: center; }
+
+.main-container h3 {
+  border-bottom: 2px solid #000;
+  margin: 10px 0;
+  padding: 10px 0; }
+  .main-container h3 span {
+    background-color: tomato;
+    color: #fbfbfb;
+    font-size: 12px;
+    text-align: center;
+    letter-spacing: 0;
+    display: inline-block;
+    position: relative;
+    border-radius: 2px;
+    height: 22px;
+    width: 26px;
+    padding: 4px 0 0 0;
+    float: right; }
+
+.list-container .row {
+  text-align: center; }
